# xtac

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md
include/: htab.h  list.h
includes/: list.h  list2.h
list/: list.c  list2.c
src/: CMakeLists.txt  htab.c  list.c
src/list/: list  list.c
tests/: CMakeLists.txt  test_list.c
tests/test_htab/: CMakeLists.txt  test_HT_create.c  test_HT_free.c
tests/test_list/: CMakeLists.txt  test_LL_create_base.c  test_LL_deln.c  test_LL_free.c  test_LL_getn.c  test_LL_insn.c  test_LL_popb.c  test_LL_popf.c  test_LL_pushb.c  test_LL_pushf.c
